--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+  .navbar-brand {
+    padding: 18px 20px;
+    display: inline-block;
+  }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
