Add Router Link as SPA
Links, hight order component like Homee y Single Page, navigation

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .main-container{
   margin-top:155px;
+  min-height:120vh;
 }
 .header{
   height:70px!important;
+}
+.footer{
+  
+    height: 50px;
+    background-color: #000000;
+   
 }
