Update Styles Changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,30 @@
 .main-container{
-  margin-top:155px;
+  margin-top:85px;
   min-height:120vh;
+  margin-right:15px;
+  margin-left:15px;
 }
-.header{
-  height:70px!important;
-}
+
 .footer{
   
     height: 50px;
     background-color: #000000;
    
+}
+@media(min-width:540px){
+  .main-container{
+    margin-top:85px;
+    min-height:120vh;
+    margin-right:30px;
+    margin-left:30px;
+  }
+}
+
+@media(min-width:768px){
+  .main-container{
+    margin-top:85px;
+    min-height:120vh;
+    margin-right:10.41%!important;
+    margin-left:10.41%!important;
+  }
 }
