--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -42,11 +42,11 @@
     top: 70px;
     padding:0 20px;
 }
-.header .divider .nav-item:first-child .nav-link {
+.header .divider .nav-item:first-child .navbar__link {
     padding-top:0;
 }
  
-.header .navbar-collapse .nav-item .nav-link{
+.header .navbar-collapse .nav-item .navbar__link{
     font-weight: normal;
     font-size:20px;
     margin-right:30px;
@@ -55,7 +55,12 @@
     text-align: right;
     color: #000000;
     padding-bottom:0;
-    padding-top:13px;
+    
+   
+}
+.header .navbar-collapse .nav-item{
+   padding-bottom:13px;
+    
    
 }
 
@@ -91,6 +96,7 @@
     background-color: #efeeef;
     margin-right: -20px;
     margin-left: -20px;
+    padding:0 20px;
 }
 
 
@@ -110,7 +116,8 @@
     }
     .header .background-menu {
         margin-right: -30px;
-        margin-left: -0px;
+        margin-left: -30px;
+        
     }
     .header .cerrar {
 
