--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -60,8 +60,11 @@
     display:block;
     width:100%;
     padding-right:27px;
+    font-weight: 400;
+    font-style: normal;
    
 }
+
 .header .navbar-collapse .nav-item{
    padding-bottom:13px;
     
@@ -182,7 +185,7 @@
         justify-content:center;
         align-items:center;
         border-bottom:4px solid transparent;
-        transition:border .5s linear;
+        transition:border .2s linear;
     }
     .header .navbar-collapse, .header .navbar-nav,.header .nav-item{
         height:100%!important;
