--- a/src/components/carlist/CarList.css
+++ b/src/components/carlist/CarList.css
@@ -48,16 +48,20 @@
 .view-model:hover  {
    color:white;
    text-decoration:none;
-
    transform: scale(1.1);
 }
 .car-list .car{
-    margin-bottom:75px;
+    
+    position:relative;
 }
-
-.car-list .car:hover>.view-model {
-   
-   display:flex;
+.model-view-container{
+    height:75px;
+    display:flex;
+    justify-content:center;
+    align-items:flex-start;
+}
+.car-list .car:hover>.model-view-container .view-model {
+  display:flex;
 }
 .car-list .car:hover h3{
 
